# RifaTrust

./: .azureignore  .deployment  .dockerignore  .editorconfig  .env.example  .gitignore  .python_packages  AZURE_AUTO_CONFIG.md  AZURE_CONFIG.txt  AZURE_DEPLOYMENT.md  AZURE_FIX_CRITICAL.md  AZURE_FIX_URGENTE.md  AZURE_STARTUP_COMMAND.txt  CLOUDFLARE_SETUP.md  CONFIGURAR_DNS.md  DEPLOYMENT_GUIDE.md  DNS_PUBLICO.md  DOCUMENTACION_MODELOS.md  DOCUMENTACION_MODELOS_PARTE3.md  DOCUMENTACION_TECNICA.md  DOCUMENTACION_VIEWS_PARTE4.md  DOCUMENTACION_VIEWS_PARTE5.md  Dockerfile  GUIA_COMPLETA_PROYECTO.md  IMPLEMENTACION_PROFESIONAL_COMPLETA.md  IMPLEMENTATION_SUMMARY.md  NAT_PORT_FORWARDING.md  NETWORK_SETUP.md  PRODUCCION.md  QUICK_START.md  QUICK_START_MYSQL.md  README.md  RESUMEN_DOCUMENTACION_COMPLETA.md  SECURITY_COMPLIANCE.md  SECURITY_ENCRYPTION.md  SETUP_STATUS.txt  SISTEMA_APROBACION.md  SOLICITUD_FIREWALL.md  azure-setup.ps1  azure-setup.sh  (+25 more)
.azure/: config  post-build.sh
.github/workflows/: django.yml  main_rifatrust.yml
apps/admin_panel/: urls.py  views.py
apps/core/: encryption.py  validators.py
apps/payments/: admin.py  urls.py  views.py
apps/raffles/: admin.py  models.py  urls.py  views.py
apps/users/: admin.py  forms.py  models.py  notifications.py  urls.py  views.py
backend/: create_demo_raffles.py
backend/apps/: __init__.py
backend/config/: api_urls.py  error_handlers.py  settings.py  urls.py  wsgi.py
config/: error_handlers.py  settings.py  urls.py
docker/mysql/: init.sql
docker/nginx/: nginx.conf
docs/: ADMIN_PANEL_PROFESSIONAL.md  COMMIT_SUMMARY.md  DATABASE_POPULATION_SUMMARY.md  DOCUMENTACION_COMPLETA.md  FIXES_APPLIED.md  INDICE_DOCUMENTACION.md  OBJETIVOS_CUMPLIDOS.md  README.md  REORGANIZACION_COMPLETA.md  REORGANIZATION.md
docs/azure/: AZURE_COMMANDS.md  AZURE_DEPLOYMENT_GUIDE.md  README.md  READY_FOR_AZURE.md
docs/deployment/: DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  README.md  prepare_azure_deployment.ps1
docs/features/: ALMACENAMIENTO_RETIRO_PREMIOS.md  README.md  RESTRICCION_ORGANIZADORES.md  TERMINOS_CONDICIONES_IMPLEMENTACION.md
docs/testing/: INFORME_PRUEBAS_FINAL.md  PLAN_PRUEBAS_COMPLETO.md  README.md  RESUMEN_FINAL_TESTS.md  test_organizer_restriction.py  test_password_reset.py  test_suite_runner.py
frontend/templates/: 400.html  403.html  404.html  (+3 more)
logs/: .gitkeep  README.md
scripts/: patch_django.py  setup_database.sql  setup_iis.ps1  test_api_rest.py  wfastcgi_init.py
templates/: 400.html  403.html  404.html  500.html  base.html  home.html
tests/: README.md
(+133 files in other folders)
